implemented dynamic-pricing-controllers